2008-03-07  Michael Sperber  <mike@xemacs.org>

	* gnuserv.el (gnuserv-temp-file-regexp): Quote the temp-directory
	part.

2008-03-05  Didier Verna  <didier@xemacs.org>

	Fix auto-formatting of comments in auto-fill-mode.

	* newcomment.el (comment-indent): Don't insert a space at bol.
	* newcomment.el (comment-indent-new-line): Bind
	block-comment-start to comment-start in order to preserve the
	formatting of previous comment lines.

2008-03-05  Didier Verna  <didier@xemacs.org>

	Ease customization of face(s) under point.
	Suggested by Andreas Rohler.

	* cus-edit.el (custom-face-prompt): New (interactive call). Offer
	a prefix for choosing a face amongst those at point instead of all
	of them.
	* cus-edit.el (customize-face-1): New. Factor out from the
	functions below.
	* cus-edit.el (customize-face): Use it.
	* cus-edit.el (customize-face-other-window): Ditto.

2008-02-16  Michael Sperber  <mike@xemacs.org>

	* autoload.el (autoload-make-autoload-operators,
	autoload-make-autoload-complex-operators): Move autoload operator
	definitons to autoload-operators.el in xemacs-base package.
	Continue to work with older packages.

2008-02-03  Aidan Kehoe  <kehoea@parhasard.net>

	* iso8859-1.el (ascii-case-table):
	Correct the order of the arguments to #'put-case-table-pair.

2008-01-25  Michael Sperber  <mike@xemacs.org>

	* build-report.el (build-report-version-file-regexp): Adjust to
	handle Mercurial hash.

2008-01-21  Aidan Kehoe  <kehoea@parhasard.net>

	* info.el (Info-suffix-list):
	Support LZMA compression, as used--oddly--by Mandriva Linux.

2008-01-17  Mike Sperber  <mike@xemacs.org>

	* files.el (insert-directory): Bind `coding-system-for-read' to
	the `file-name' coding system.  (Previously, the default ended up
	being undecided, which doesn't work well for UTF-8-based locales,
	for example.)

2008-01-16  Aidan Kehoe  <kehoea@parhasard.net>

	* keydefs.el (global-map):
	Bind '(shift delete) to #'kill-primary-selection, as described by
	Glynn Clements in